policies/tests/resources/pod-without-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-limits
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:alpine
      # No resources block - should be rejected by require-resource-limits policy
