policies/tests/disallow-privileged-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-test
policies:
  - ../disallow-privileged-containers.yaml
resources:
  - resources/pod-non-privileged.yaml
  - resources/pod-privileged.yaml
results:
  - policy: disallow-privileged-containers
    rule: check-privileged
    resource: pod-non-privileged
    result: pass
  - policy: disallow-privileged-containers
    rule: check-privileged
    resource: pod-privileged
    result: fail
