policies/tests/require-resource-limits-test.yaml
# Run with: kyverno test policies/tests/
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-resource-limits-test
policies:
  - ../require-resource-limits.yaml
resources:
  - resources/pod-with-limits.yaml
  - resources/pod-without-limits.yaml
results:
  - policy: require-resource-limits
    rule: check-container-limits
    resource: pod-with-limits
    result: pass
  - policy: require-resource-limits
    rule: check-container-limits
    resource: pod-without-limits
    result: fail
